# poe2chrono

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  main.py  pyproject.toml
.github/workflows/: build.yml
docs/: USER_GUIDE.md
docs/roadmap/: 001-run-attemp-counter.md  002-simplified-auto-mode-ui.md  003-detailed-time-display.md  004-full-run-history.md  005-unique-relic-tracking.md  006-abandoned-interrupted-runs.md  007-persist-app-state.md  009-unify-main-and-history-windows.md  010-navigation-menu.md  011-create-pre-run-screen.md
src/zarokh/: __main__.py  app_controller.py  client_log_locator.py  config.py  log_watcher.py  records.py  relics.py  run.py  stopwatch.py  timer.py  windows_utils.py
src/zarokh/ui/: history_window.py  overlay.py  tooltip.py
tests/: test_app_controller.py  test_client_log_locator.py  test_config.py  test_log_watcher.py  test_overlay_integration.py  test_records.py  test_run.py  test_stopwatch.py  test_timer.py  test_windows_utils.py
